tests/codegen/fail/unsupported_capturing_closure_build.stderr
error: tests/codegen/fail/unsupported_capturing_closure_build.ql:3:19: LLVM IR backend foundation currently only supports direct local calls for non-`move` closures that capture immutable same-function scalar bindings
      let capture = () => value
                    ^^^^^^^^
